# autonomous_explore

./: .clang-format  README.md  run-format.bash
astar_planner/launch/: astar_action.launch  astar_planner.launch
control_msgs/: README.md  package.xml
coverage_exploration/: CMakeLists.txt  package.xml
coverage_exploration/include/coverage_exploration/: Color.h  Config.hpp  ExplorationPlannerTypes.hpp  Planner.hpp  PoseWrap.h  VisMarker.h  pose_handler.h
coverage_exploration/launch/: coverage_explore.launch
coverage_exploration/src/: Planner.cpp  exploration_node.cpp
exploration_launch_pkg/: CMakeLists.txt  README.md  package.xml
exploration_launch_pkg/launch/: astar_real.launch  astar_sim.launch  sastar_real.launch  sastar_sim.launch
exploration_launch_pkg/launch/includes/real/: astar_action.launch  large_map.launch  sas_astar_action.launch
exploration_launch_pkg/launch/includes/real/rviz_config/: explore_map_viz.rviz
exploration_launch_pkg/launch/includes/sim/: astar_action.launch  explore_action.launch  large_map.launch  sas_astar_action.launch
exploration_launch_pkg/launch/includes/sim/rviz_config/: explore_map_viz.rviz
explore_large_map/cfg/: explore_map_viz.rviz  vrep_explore_map_viz.rviz
explore_large_map/launch/: large_map.launch
explore_large_map/src/: explore_large_map_node.cpp  map_builder.cpp  map_entry.cpp
global_map/: CMakeLists.txt  package.xml
global_map/include/global_map/: map_builder.hpp
global_map/src/: global_map_node.cpp  map_builder.cpp
internal_grid_map/: CMakeLists.txt
internal_grid_map/include/internal_grid_map/: exploration_transform_vis.h  internal_grid_map.hpp
internal_grid_map/src/: internal_grid_map.cpp  main.cpp  ogm2gridmap_test.cpp
internal_grid_map/tests/: internal_grid_map_test.cpp
iv_explore_msgs/: CMakeLists.txt  package.xml
iv_explore_msgs/action/: Explore.action  PlannerControl.action
iv_explore_msgs/msgs/: ObjectRecognitionStatus.msg
iv_explore_msgs/srv/: GetAstarPlan.srv  GetVehiclePosition.srv
iv_slam_ros_msgs/: CMakeLists.txt
iv_slam_ros_msgs/msg/: SensorTopics.msg  TrajectoryOptions.msg
local_map/: CMakeLists.txt  package.xml
local_map/include/local_map/: map_builder.h
local_map/src/: local_map_node.cpp  map_builder.cpp
map_ray_caster/: CMakeLists.txt  package.xml
map_ray_caster/include/map_ray_caster/: map_ray_caster.h  ray_caster_utils.h
map_ray_caster/src/: map_ray_caster.cpp
path_transform_planner/: CMakeLists.txt  package.xml
path_transform_planner/include/path_transform/: path_planning.hpp
path_transform_planner/src/: path_planning.cpp  path_transforms_node.cpp
r_s_planner/cfg/: r_s_viz.rviz
ros_autonomous_exploration/launch/: explore_action.launch
ros_autonomous_exploration/src/: explore_client.cpp  explore_server.cpp
rrt_exploration/: CMakeLists.txt  package.xml
rrt_exploration/include/: frontier_search.hpp  functions.h
rrt_exploration/launch/: single_cv_detector.launch  single_rrt(cpp)_detector.launch  single_rrt(py)_detector.launch
rrt_exploration/rviz/: cv_detector.rviz  rrt_cpp_detector.rviz  rrt_detector.rviz
rrt_exploration/scripts/: another_assigner.py  assigner.py  filter.py  frontier_opencv_detector.py  functions.py  getfrontier.py
rrt_exploration/src/: filter.cpp  frontier_search.cpp  functions.cpp  global_rrt_detector.cpp  local_rrt_detector.cpp
sas_space_explore/cfg/: dynamic_params.yaml
sas_space_explore/include/sas_space_explore/: basic_element_utils.hpp
sas_space_explore/launch/: sas_explore.launch
sas_space_explore/src/sas_explore/: sas_explore.cpp
srt_exploration/: CMakeLists.txt  package.xml
srt_exploration/include/srt_exploration/: SRT.hpp  SRTNode.hpp
srt_exploration/src/: SRT.cpp  SRTNode.cpp  srt_exploration_node.cpp
trajectory_server/: CMakeLists.txt  package.xml
trajectory_server/src/: trajectory_server.cpp
udp_revfrom_camera/: CMakeLists.txt  package.xml
udp_revfrom_camera/launch/: udp_listen.launch
udp_revfrom_camera/src/: boost_main.cpp  main.cpp
zack/: 2018-03-19-19-14-48.bag  2018-03-27-10-35-20.bag
