<?xml version="1.0"?>
<package format="2">
    <name>exploration_launch_pkg</name>
    <version>0.0.1</version>
    <description>This package provides launch files for all needed rospkg for
        exploration task, including mapping,decision,path planning</description>
    <author email="zhouwk33@gmail.com">kevin</author>
    <maintainer email="zhouwk33@gmail.com">kevin</maintainer>
    <!-- The export tag contains other, unspecified, tags -->

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
</package>
