<?xml version="1.0"?>
<package format="2">
    <name>path_transform_planner</name>
    <version>0.0.1</version>
    <description>path transform planner</description>
    <author email="todo@todo.com">todo</author>
    <maintainer email="todo@todo.com">todo</maintainer>
    <!-- The export tag contains other, unspecified, tags -->

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TBD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>grid_map_core</depend>
    <depend>grid_map_msgs</depend>
    <depend>grid_map_ros</depend>
    <depend>nav_msgs</depend>
    <depend>opt_utils</depend>
    <depend>internal_grid_map</depend>
    <depend>tf</depend>

</package>
